--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,74 @@
-/* You can add global styles to this file, and also import other style files */
+.background {
+  background: url(./assets/imgs/bg-main.jpg);
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  opacity: 25%;
+  z-index: -5;
+}
+
+.content {
+  text-align: center;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.btn {
+  padding: 16px;
+  border-radius: 50px;
+  font-size: larger;
+  font-weight: bold;
+  background: rgba(0,0,0,0.7);
+  color: #ffff;
+  text-transform: capitalize;
+  border: 1px solid #eeeeee;
+}
+
+.mb-0 {
+  margin-bottom: 0px;
+}
+
+.row {
+  display: flex;
+  overflow: hidden;
+}
+
+.vertical-padding {
+  padding-top: 15rem;
+}
+
+.col-7 {
+  display: flex;
+  flex-direction: column;
+  flex: 3 1 100px;
+  height: 100vh;
+}
+
+.desc {
+  padding: 16px;
+  text-align: left;
+}
+
+.start-btn {
+  padding: 16px;
+}
+
+.start-btn .btn {
+  min-width: 130px;
+}
+
+.main-card {
+  width: 93%;
+  min-height: 150px;
+  background: #0c0c0c47;
+  margin: auto;
+  margin-left: 3%;
+  border-radius: 25px;
+}
