load JSON data & questionnaire object

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,9 @@
   <div class="col-3">
     <div class="vertical-padding">
       <div class="logo">
-        <img alt="Privathaftpflichtversicherung" src="assets/imgs/liability.png" />
+        <img alt="{{ title }}" src="assets/imgs/liability.png" />
       </div>
-      <h2 class="title"> Privathaftpflichtversicherung </h2>
+      <h2 class="title"> {{ title }} </h2>
     </div>
   </div>
   <div class="col-7">
