--- a/src/app/components/questionaire-details/questionaire-details.component.html
+++ b/src/app/components/questionaire-details/questionaire-details.component.html
@@ -1,11 +1,11 @@
 <!-- questionaire detals  -->
 <div class="main-card">
   <div class="title mid">
-    <h2 class="title">{{ questionaire.name }}</h2>
+    <h2 class="title">{{ questionaire ? questionaire.name : ''}}</h2>
   </div>
   <div class="desc">
     <h3>
-      {{ questionaire.description }}
+      {{  questionaire ? questionaire.description : ''}}
     </h3>
   </div>
   <div class="start-btn">
